--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
   
   <!-- Header -->
-  <header class="bg-yellow-400 shadow-sm">
+  <header class="bg-gray-100 shadow-sm">
     
     <!-- Navigation Bar -->
     <div class="flex justify-between items-center h-12 px-4 md:px-8">
