edit line in body of website

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
           Drew
         </h1>
         <h4 class="text-md font-body text-gray-500 uppercase max-w-md">
-          Data Analyst leading in/extrinsic business initiatives to secure incremental funding for public education.
+          Senior Data Analyst leading business initiatives to secure incremental funding for public education.
         </h4>
       </div>
 
