--- a/public/index.html
+++ b/public/index.html
@@ -18,62 +18,76 @@
   <title>Drew | Data Analyst</title>
   
 </head>
+
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen">
 
-  
   <!-- Header -->
   <header class="bg-gray-100 shadow-sm">
-    
     <!-- Navigation Bar -->
     <div class="flex justify-between items-center h-12 px-4 md:px-8">
       <a href="index.html">
-      <img
-      src="./images/Button1.png"
-      alt="Drew's Logo"
-      class="h-8 w-auto"
-      />
+        <img
+          src="./images/Button1.png"
+          alt="Drew's Logo"
+          class="h-8 w-auto"
+        />
       </a>
-
       <!-- Desktop Menu -->
-      <nav
-        id="menu"
-        class="hidden md:block"
-        aria-label="Main Navigation"
-      >
+      <nav id="menu" class="hidden md:block" aria-label="Main Navigation">
       </nav>
     </div>
   </header>
 
   <!-- Main Content -->
-  <main class="flex-grow flex items-center justify-center">
-  <section class="py-12 px-4 md:px-12">
-    <div class="flex flex-col lg:flex-row items-center w-full max-w-7xl mx-auto">
-      <!-- Hero Text -->
-      <div class="text-center lg:text-left lg:w-1/2 p-8">
-        <h1
-          class="text-4xl lg:text-7xl font-extrabold text-gray-800 hover:text-green-800 uppercase mb-4 transition-colors duration-200"
-        >
-          Drew
-        </h1>
-        <h4 class="text-md font-body text-gray-500 uppercase max-w-md">
-          Senior Data Analyst leading business initiatives to secure incremental funding for public education.
-        </h4>
-      </div>
+  <main class=" flex items-center justify-center">
+    <section class="py-8 px-4 md:px-12">
+      <div class="flex flex-col lg:flex-row items-center w-full max-w-7xl mx-auto">
+        
+        <!-- Hero Text + Case Study -->
+        <div class="text-center lg:text-left lg:w-1/2 p-8">
+          <h1
+            class="text-4xl lg:text-7xl font-extrabold text-gray-800 hover:text-green-800 uppercase mb-4 transition-colors duration-200"
+          >
+            Drew
+          </h1>
+          <h4 class="text-md font-body text-gray-500 uppercase max-w-md">
+            Senior Data Analyst leading business initiatives to secure incremental funding for public education.
+          </h4>
+          <!-- Case Study Container -->
+          <div id="case-study-container" class="mt-6 flex flex-row justify-start">
+            <div class="rounded-lg w-full p4 max-w-sm lg:mt-[30px]">
+              <!-- Inner Card -->
+              <div class="bg-white rounded-md p-6 shadow flex flex-col h-full">
+                <h3 class="text-xl font-bold mb-2">Featured Case Study</h3>
+                <!--<p class="text-gray-700 mb-4">
+                  A concise overview of a recent project highlighting impact and outcomes.
+                </p>-->
+                <a
+                  href="https://docs.google.com/document/d/1HCu6MbtmO7lOZobppUb0rE2ipiJoPjzuO2Iey8u-q68/edit?usp=sharing"
+                  class="mt-auto inline-block px-4 py-2 bg-yellow-400 text-white rounded hover:bg-green-700 transition-colors"
+                >
+                  Read
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
 
-      <!-- Project Cards Container -->
-      <div
-        id="project-container"
-        class="flex flex-wrap justify-center bg-green-700 p-4 rounded-lg text-gray-800"
-      >
-        <!-- Cards are loaded dynamically from app.js -->
+        <!-- Project Cards Container -->
+        <div
+          id="project-container"
+          class="flex flex-wrap justify-center bg-green-700 p-4 rounded-lg text-gray-800 lg:ml-8 lg:w-1/2"
+        >
+          <!-- Cards are loaded dynamically from app.js -->
+        </div>
+
       </div>
-    </div>
-  </section>
+    </section>
   </main>
-  </body>
 
   <!-- Footer -->
-  <footer class="border-t border-gray-200 bg-gray-100">
+   <!-- Footer -->
+   <footer class="border-t border-gray-200 bg-gray-100">
     <div
       class="container px-5 py-6 mx-auto flex flex-col sm:flex-row items-center"
     >
@@ -139,14 +153,12 @@
       </span>
     </div>
   </footer>
-
-  <!-- JavaScript (defer ensures DOM is loaded first) -->
+  <!-- JavaScript -->
   <script src="app.js" defer></script>
   <script>
-    // Dynamically set the year in the footer
     document.addEventListener("DOMContentLoaded", () => {
       document.getElementById("year").textContent = new Date().getFullYear();
     });
   </script>
-
+</body>
 </html>
