create placeholders for upcoming writings

--- a/public/writings.html
+++ b/public/writings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Selected writings by Drew on data storytelling and analytics." />
+    <meta name="description" content="Selected writings by Drew." />
     <link rel="icon" type="image/png" href="./images/Button1.png" />
     <link rel="stylesheet" href="styles.css" />
     <title>Drew | Writings</title>
@@ -25,7 +25,7 @@
         <div class="max-w-3xl mx-auto text-center">
           <h1 class="text-4xl md:text-6xl font-extrabold text-gray-800 uppercase">Writings</h1>
           <p class="mt-4 text-base md:text-lg text-gray-600 font-body">
-            Essays and reflections on the craft of data storytelling, building analytics programs, and partnering with educators.
+            Written pieces that discuss and spotlight the status quo.
           </p>
         </div>
 
